# fepsip

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docker/: Dockerfile.api  Dockerfile.dashboard
k8s/: deployment.yaml
notebooks/: 01_quickstart.py
src/: __init__.py
src/agents/: __init__.py  agents.py
src/alerts/: __init__.py  alert_system.py
src/anomaly/: __init__.py  anomaly_detector.py
src/api/: __init__.py  main.py
src/dashboard/: __init__.py  app.py
src/events/: __init__.py  event_intelligence.py
src/graph/: __init__.py  knowledge_graph.py  temporal_graph.py
src/ingestion/: __init__.py  market_data.py
src/memory/: __init__.py  financial_memory.py
src/models/: __init__.py  encoders.py  training.py
src/portfolio/: __init__.py  portfolio_manager.py
src/prediction/: __init__.py  predictor.py
src/regime/: __init__.py  market_regime.py
src/simulation/: __init__.py  scenario_simulator.py
src/utils/: __init__.py  config.py  logger.py  schemas.py  settings.py
src/xai/: __init__.py  explainer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_anomaly.py  test_event_intelligence.py  test_knowledge_graph.py  test_memory.py  test_portfolio.py  test_prediction.py  test_simulation.py  test_xai.py
